--- a/app/public/index.html
+++ b/app/public/index.html
@@ -10,5 +10,6 @@
 <body>
     <img class="logo" src="./images/idn-logo.png" alt="idn-logo">
      <h1>mari kita belajar</h1>
+     <p>coba perubahan</p> 
 </body>
 </html>
