--- a/app/public/index.html
+++ b/app/public/index.html
@@ -16,7 +16,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form Penerimaan Mahasiswa</title>
+    <title>Form Penerimaan Tukang Baru </title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -67,7 +67,7 @@
 <body>
 
     <div class="container">
-        <h2>Form Penerimaan Mahasiswa Baru</h2>
+        <h2>Form Penerimaan Tukang Baru</h2>
         <form action="#" method="POST">
             <label for="nama">Nama Lengkap:</label>
             <input type="text" id="nama" name="nama" required placeholder="Masukkan nama lengkap">
