--- a/app/public/index.html
+++ b/app/public/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <img class="logo" src="./images/idn-logo.png" alt="idn-logo">
-     <h1>mari kita belajar</h1>
+     <h1>lowongan</h1>
      
      <!DOCTYPE html>
 <html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form Penerimaan Tukang Baru </title>
+    <title>Form Penerimaan Tukang gali </title>
     <style>
         body {
             font-family: Arial, sans-serif;
