--- a/app/public/index.html
+++ b/app/public/index.html
@@ -67,7 +67,7 @@
 <body>
 
     <div class="container">
-        <h2>Form Penerimaan Tukang Baru</h2>
+        <h2>Form Penerimaan Tukang gali</h2>
         <form action="#" method="POST">
             <label for="nama">Nama Lengkap:</label>
             <input type="text" id="nama" name="nama" required placeholder="Masukkan nama lengkap">
