--- a/app/public/index.html
+++ b/app/public/index.html
@@ -16,7 +16,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form Penerimaan Tukang gali </title>
+    <title>Form Penerimaan Tukang </title>
     <style>
         body {
             font-family: Arial, sans-serif;
